--- a/src/components/.html
+++ b/src/components/.html
@@ -1,9 +1,10 @@
 <fieldset>
   <label for="project">Project</label>
-  <input type="text" name="project" id="project" />
+  <input required type="text" name="project" id="project" list="projectName" />
+  <datalist id="projectName"> </datalist>
   <label for="name">Name of Project</label>
-  <input type="text" name="name" id="name" />
+  <input required type="text" name="name" id="name" />
   <label for="description">Description</label>
-  <input type="text" name="description" id="description" />
+  <input required type="text" name="description" id="description" />
 </fieldset>
-<button type="submit"></button>
+<button class="form-submit" type="submit">Add TODO</button>
